# pyTAF

./: pyproject.toml
pytaf/duckduckgo/pages/: results.py  search.py
tests/: config.json  conftest.py  test_math.py  test_web.py
