[tool.poetry]
name = "pytaf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
webdriver-manager = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
selenium = "^3.141.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
